# letsraid

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  FLY-DEPLOY.md  ISSUES.md  README.md  bot.py  config.py  db.py  fly.toml  pyproject.toml  requirements.txt  run.ps1
cogs/: lfg.py
tests/: conftest.py  test_db.py
